# rules_vmtest

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  RELEASING.md  go.mod  go.sum
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  publish.yml  release.yml  release_prep.sh
agent/: BUILD.bazel  agent.go  agent_test.go  main.go  vmtest-agent.service
agentpb/: BUILD.bazel  types.go
docs/: BUILD.bazel
e2e/smoke/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-smoke  bazel-testlogs
examples/kernel_boot/: BUILD.bazel  boot_test.go
examples/systemd_service/: BUILD.bazel  service_test.go
machine/: BUILD.bazel  machine.go  machine_integration_test.go  machine_test.go
orchestrator/: BUILD.bazel  main.go
runner/: BUILD.bazel  config.go  network.go  process_manager.go  qemu.go  runner.go  runner_test.go  tpm.go  utils.go
scripts/: setup-bridge.sh  teardown-bridge.sh
tests/: BUILD.bazel  mock_test.sh  mock_toolchains.bzl  vm_go_test_analysis.bzl
vm/: BUILD.bazel  agentconn.go  agentconn_test.go  bridge.go  config.go  disk.go  network.go  process.go  qemu.go  qmp.go  serial.go  serial_test.go  tpm.go  vm.go  vm_test.go
vmtest/: BUILD.bazel  config.bzl  defs.bzl  rules.bzl  test_initrd.bzl  vm_go_test.bzl  vm_test.bzl
vmtest/cmd/: BUILD.bazel  main.go
vmtest/cmd/testrunner/: BUILD.bazel  main.go
