load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix rules_vmtest
# gazelle:resolve go rules_vmtest/agentpb @rules_vmtest//agentpb
# gazelle:resolve go rules_vmtest/machine @rules_vmtest//machine
# gazelle:resolve go rules_vmtest/runner @rules_vmtest//runner
# gazelle:resolve go rules_vmtest/vm @rules_vmtest//vm

gazelle(name = "gazelle")
