load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "agent_lib",
    srcs = [
        "agent.go",
        "main.go",
    ],
    importpath = "github.com/mikn/rules_vmtest/agent",
    visibility = ["//visibility:private"],
    deps = ["@rules_vmtest//agentpb"],
)

go_binary(
    name = "agent",
    embed = [":agent_lib"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "agent_test",
    srcs = ["agent_test.go"],
    embed = [":agent_lib"],
    deps = ["@rules_vmtest//agentpb"],
)

# Systemd service file tar
pkg_tar(
    name = "service_tar",
    srcs = ["vmtest-agent.service"],
    mode = "0644",
    package_dir = "/etc/systemd/system",
    symlinks = {
        "/etc/systemd/system/multi-user.target.wants/vmtest-agent.service": "/etc/systemd/system/vmtest-agent.service",
    },
)

# Agent binary tar
pkg_tar(
    name = "agent_bin_tar",
    srcs = [":agent"],
    package_dir = "/usr/lib/vmtest",
)

# Agent binary + service file, ready to layer into a rootfs
pkg_tar(
    name = "agent_tar",
    visibility = ["//visibility:public"],
    deps = [
        ":agent_bin_tar",
        ":service_tar",
    ],
)
