load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "machine",
    srcs = ["machine.go"],
    importpath = "rules_vmtest/machine",
    visibility = ["//visibility:public"],
    deps = ["@rules_vmtest//vm"],
)

go_test(
    name = "machine_test",
    srcs = [
        "machine_integration_test.go",
        "machine_test.go",
    ],
    embed = [":machine"],
    deps = [
        "@rules_vmtest//agentpb",
        "@rules_vmtest//vm",
    ],
)
