load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "orchestrator_lib",
    srcs = ["main.go"],
    importpath = "rules_vmtest/orchestrator",
    visibility = ["//visibility:public"],
    deps = ["@rules_go//go/runfiles"],
)

go_binary(
    name = "orchestrator",
    embed = [":orchestrator_lib"],
    visibility = ["//visibility:public"],
)
