load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runner",
    srcs = [
        "config.go",
        "network.go",
        "process_manager.go",
        "qemu.go",
        "runner.go",
        "tpm.go",
        "utils.go",
    ],
    importpath = "github.com/mikn/rules_vmtest/runner",
    visibility = ["//visibility:public"],
    deps = ["@rules_qemu//vm"],
)

go_test(
    name = "runner_test",
    srcs = ["runner_test.go"],
    embed = [":runner"],
)
