load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vm",
    srcs = [
        "agentconn.go",
        "bridge.go",
        "config.go",
        "disk.go",
        "network.go",
        "process.go",
        "qemu.go",
        "qmp.go",
        "serial.go",
        "tpm.go",
        "vm.go",
    ],
    importpath = "rules_vmtest/vm",
    visibility = ["//visibility:public"],
    deps = ["@rules_vmtest//agentpb"],
)

go_test(
    name = "vm_test",
    srcs = [
        "agentconn_test.go",
        "serial_test.go",
        "vm_test.go",
    ],
    embed = [":vm"],
    deps = ["@rules_vmtest//agentpb"],
)
