# VM test harness rules

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "defs.bzl",
        "vm_go_test.bzl",
        "vm_test.bzl",
        "config.bzl",
        "rules.bzl",
        "test_initrd.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":config_bzl",
        ":vm_go_test_bzl",
        ":vm_test_bzl",
    ],
)

bzl_library(
    name = "vm_go_test_bzl",
    srcs = ["vm_go_test.bzl"],
    visibility = ["//visibility:public"],
    # Note: loads @rules_linux//linux:providers.bzl but rules_linux does not
    # yet publish bzl_library targets to BCR. Omitted to avoid resolution failure.
)

bzl_library(
    name = "vm_test_bzl",
    srcs = ["vm_test.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "config_bzl",
    srcs = ["config.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_go//go:def",
    ],
)

bzl_library(
    name = "rules_bzl",
    srcs = ["rules.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@rules_go//go:def"],
)

bzl_library(
    name = "test_initrd_bzl",
    srcs = ["test_initrd.bzl"],
    visibility = ["//visibility:public"],
    # Note: loads @rules_linux//linux:defs.bzl but rules_linux does not
    # yet publish bzl_library targets to BCR.
)
